chore(social): update social share link (#7893)
* chore(social): update social share link

* chore(thumbnail): host image on github

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/react/.storybook/manager-head.html
+++ b/packages/react/.storybook/manager-head.html
@@ -16,7 +16,7 @@
 />
 <meta
   property="og:image"
-  content="https://media.github.ibm.com/user/525/files/59e3bfde-b990-11e7-87ef-072e89a87719"
+  content="https://media.github.ibm.com/user/1679/files/aa651000-7749-11eb-900e-eeb9312ed756"
 />
 <meta property="og:url" content="http://react.carbondesignsystem.com" />
 
@@ -26,6 +26,10 @@
 <!-- Social -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image:alt" content="Carbon Design System" />
+<meta
+  name="twitter:image"
+  content="https://media.github.ibm.com/user/1679/files/aa651000-7749-11eb-900e-eeb9312ed756"
+/>
 <meta name="twitter:site" content="@_carbondesign" />
 
 <!-- Storybook override -->
