feat(Breadcrumb): add breadcrumb styles and tests (#8769)
* feat(Breadcrumb): add breadcrum styles and tests

* test(Breadcrumb): add style test

* style(Storybook): sync base styles with current storybook

* fix(Breadcrumb): adjust imports

--- a/packages/carbon-react/.storybook/manager-head.html
+++ b/packages/carbon-react/.storybook/manager-head.html
@@ -53,7 +53,7 @@
     color: #161616;
   }
 
-  .simplebar-content .sidebar-item.selected {
+  a.sidebar-item[data-selected='true'] {
     color: #161616;
   }
 </style>
