--- a/packages/carbon-react/.storybook/preview-head.html
+++ b/packages/carbon-react/.storybook/preview-head.html
@@ -12,7 +12,18 @@
   }
 
   .sbdocs-wrapper .sbdocs-h2 {
-    margin-bottom: 0;
     padding-bottom: 12px;
+    margin-bottom: 0;
+  }
+
+  .sb-show-main.sb-main-padded {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 42px;
+  }
+
+  body #root {
+    width: 100%;
   }
 </style>
