--- a/packages/carbon-react/.storybook/manager-head.html
+++ b/packages/carbon-react/.storybook/manager-head.html
@@ -49,15 +49,23 @@
     display: none;
   }
 
-  .simplebar-content form span {
+  .os-content form span {
     font-weight: 600;
   }
 
-  .simplebar-content a button {
+  .os-content a button {
+    color: #161616;
+  }
+
+  button.sidebar-item svg {
     color: #161616;
   }
 
   a.sidebar-item[data-selected='true'] {
+    color: #161616;
+  }
+
+  a.sidebar-item[data-selected='true'] svg {
     color: #161616;
   }
 </style>
